2019-05-11 list and dictionaries.

--- a/lists, tuple.ipynb
+++ b/lists, tuple.ipynb
@@ -1114,6 +1114,692 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'orange', 'banana', 'grape', 'apple', 'orange', 'banana', 'grape', 'apple', 'orange', 'banana', 'grape', 'GUVA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\",\"orange\",\"banana\",\"grape\",\"apple\",\"orange\",\"banana\",\"grape\",\"apple\",\"orange\",\"banana\",\"grape\"]\n",
+    "l.insert(100,\"GUVA\")\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'orange', 'banana', 'grape', 'apple', 'orange', 'banana', 'grape', 'apple', 'orange', 'GUVA', 'banana', 'grape']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\",\"orange\",\"banana\",\"grape\",\"apple\",\"orange\",\"banana\",\"grape\",\"apple\",\"orange\",\"banana\",\"grape\"]\n",
+    "l.insert(-2,\"GUVA\")\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Apple', 'ORange', 'apple', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\",\"Apple\",\"orange\",\"ORange\"]\n",
+    "l.sort()\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solve the above issue in list sort method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'6'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "max(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "int() argument must be a string, a bytes-like object or a number, not 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-cfe03a2780f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "int(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "6\n",
+      "23\n",
+      "45\n",
+      "45\n",
+      "23\n",
+      "6\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "for i in l:\n",
+    "    print(int(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 6, 23, 45, 45, 23, 6, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "l_int=[]\n",
+    "for i in l:\n",
+    "    l_int.append(int(i))\n",
+    "print(l_int)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 6, 23, 45, 45, 23, 6, 12]\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "l_int=[]\n",
+    "for i in l:\n",
+    "    l_int.append(int(i))\n",
+    "print(l_int)\n",
+    "max_ele = max(l_int)\n",
+    "print(max_ele)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 6, 23, 45, 45, 23, 6, 12]\n",
+      "45\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[12, 6, 23, 45, 23, 6, 12]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "l_int=[]\n",
+    "for i in l:\n",
+    "    l_int.append(int(i))\n",
+    "print(l_int)\n",
+    "max_ele = max(l_int)\n",
+    "print(max_ele)\n",
+    "l_int.remove(max_ele)\n",
+    "l_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 6, 23, 45, 45, 23, 6, 12]\n",
+      "45\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[12, 6, 23, 23, 6, 12]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "l_int=[]\n",
+    "for i in l:\n",
+    "    l_int.append(int(i))\n",
+    "print(l_int)\n",
+    "max_ele = max(l_int)\n",
+    "print(max_ele)\n",
+    "while l_int.count(max_ele)>0:\n",
+    "    l_int.remove(max_ele)\n",
+    "l_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 6, 23, 45, 45, 23, 6, 12]\n",
+      "45\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "l_int=[]\n",
+    "for i in l:\n",
+    "    l_int.append(int(i))\n",
+    "print(l_int)\n",
+    "max_ele = max(l_int)\n",
+    "print(max_ele)\n",
+    "while l_int.count(max_ele)>0:\n",
+    "    l_int.remove(max_ele)\n",
+    "print(max(l_int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"12\",\"6\",\"23\",\"45\",\"45\",\"23\",\"6\",\"12\"]\n",
+    "l_int=[]\n",
+    "for i in l:\n",
+    "    l_int.append(int(i))\n",
+    "max_ele = max(l_int)\n",
+    "while l_int.count(max_ele)>0:\n",
+    "    l_int.remove(max_ele)\n",
+    "print(max(l_int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "k=l.append(10)\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "[1, 2, 3, 4, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "k=l.append(10)\n",
+    "print(k)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4] 140056335006728\n",
+      "[1, 2, 3, 4, 10] 140056335006728\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "print(l, id(l))\n",
+    "l.append(10)\n",
+    "print(l, id(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4] 140056360628616\n",
+      "None\n",
+      "[1, 2, 4] 140056360628616\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "print(l, id(l))\n",
+    "k=l.remove(3)\n",
+    "print(k)\n",
+    "print(l, id(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-30, 1, 2, 3, 4, -20] 140056333655880\n",
+      "None\n",
+      "[-30, -20, 1, 2, 3, 4] 140056333655880\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[-30,1,2,3,4,-20]\n",
+    "print(l, id(l))\n",
+    "k=l.sort()\n",
+    "print(k)\n",
+    "print(l, id(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-30, -20, 1, 2, 3, 4]\n",
+      "[-30, 1, 2, 3, 4, -20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[-30,1,2,3,4,-20]\n",
+    "k=l.copy()\n",
+    "l.sort()\n",
+    "print(l)\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-30, -20, 1, 2, 3, 4]\n",
+      "[-30, -20, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[-30,1,2,3,4,-20]\n",
+    "k=l\n",
+    "l.sort()\n",
+    "print(l)\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30\n",
+      "100 200 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c=[10,20,30]\n",
+    "x,y,z=(100,200,300)\n",
+    "print(a,b,c)\n",
+    "print(x,y,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-c3eee75263ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=[10,20,30,40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 [20, 30, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,*b=[10,20,30,40]\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 [20, 30] 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,*b,c=[10,20,30,40]\n",
+    "print(a, b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 [20, 30] 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,*b,c=(10,20,30,40)\n",
+    "print(a, b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40]\n",
+      "[100, 200, 300, 400]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=[10,20,30,40],[100,200,300,400]\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=(1,2,3,4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, 30, 40, 50) <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10,20,30,40,50\n",
+    "print(a, type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-e63a6e08d6c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=10,20,30,40,50\n",
+    "print(a, type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 <class 'int'>\n",
+      "[20, 30, 40, 50] <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, *b=10,20,30,40,50\n",
+    "print(a, type(a))\n",
+    "print(b, type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 30, 40, 50] <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, *b=10,20,30,40,50\n",
+    "print(b, type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=(1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t=(10,20,30,4)\n",
+    "l=list(t)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
