--- a/files.ipynb
+++ b/files.ipynb
@@ -841,12 +841,438 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f=open(\"data.csv\",\"\")"
+    "f=open(\"data.csv\")\n",
+    "data = f.read()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0,Company,Contact,Country\\n1,Alfreds Futterkiste,Maria Anders,Germany\\n2,Centro comercial Moctezuma,Francisco Chang,Mexico\\n3,Ernst Handel,Roland Mendel,Austria\\n4,Island Trading,Helen Bennett,UK\\n5,Laughing Bacchus Winecellars,Yoshi Tannamuri,Canada\\n6,Magazzini Alimentari Riuniti,Giovanni Rovelli,Italy\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,Company,Contact,Country\n",
+      "1,Alfreds Futterkiste,Ma\n",
+      "********************\n",
+      "ria Anders,Germany\n",
+      "2,Centro comercial Moctezuma,Fr\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "data = f.read(50)\n",
+    "print(data)\n",
+    "data1=f.read(50)\n",
+    "print(\"*\"*20)\n",
+    "print(data1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,Company,Contact,Country\n",
+      "1,Alfreds Futterkiste,Ma\n",
+      "********************\n",
+      "ria Anders,Germany\n",
+      "2,Centro comercial Moctezuma,Fr\n",
+      "ancisco Chang,Mexico\n",
+      "3,Ernst Handel,Roland Mendel,\n",
+      "********************\n",
+      "Austria\n",
+      "4,Island Trading,Helen Bennett,UK\n",
+      "5,Laughi\n",
+      "ng Bacchus Winecellars,Yoshi Tannamuri,Canada\n",
+      "6,Ma\n",
+      "********************\n",
+      "gazzini Alimentari Riuniti,Giovanni Rovelli,Italy\n",
+      "\n",
+      "\n",
+      "********************\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "data = f.read(50)\n",
+    "print(data)\n",
+    "data1=f.read(50)\n",
+    "print(\"*\"*20)\n",
+    "print(data1)\n",
+    "data = f.read(50)\n",
+    "print(data)\n",
+    "data1=f.read(50)\n",
+    "print(\"*\"*20)\n",
+    "print(data1)\n",
+    "data = f.read(50)\n",
+    "print(data)\n",
+    "data1=f.read(50)\n",
+    "print(\"*\"*20)\n",
+    "print(data1)\n",
+    "data = f.read(50)\n",
+    "print(data)\n",
+    "data1=f.read(50)\n",
+    "print(\"*\"*20)\n",
+    "print(data1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,Company,Contact,Country\n",
+      "1,Alfreds Futterkiste,Ma\n",
+      "********************\n",
+      "ria Anders,Germany\n",
+      "2,Centro comercial Moctezuma,Fr\n",
+      "********************\n",
+      "ancisco Chang,Mexico\n",
+      "3,Ernst Handel,Roland Mendel,\n",
+      "********************\n",
+      "Austria\n",
+      "4,Island Trading,Helen Bennett,UK\n",
+      "5,Laughi\n",
+      "********************\n",
+      "ng Bacchus Winecellars,Yoshi Tannamuri,Canada\n",
+      "6,Ma\n",
+      "********************\n",
+      "gazzini Alimentari Riuniti,Giovanni Rovelli,Italy\n",
+      "\n",
+      "********************\n",
+      "\n",
+      "********************\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "data = True\n",
+    "while data:\n",
+    "    data = f.read(50)\n",
+    "    print(data)\n",
+    "    print(\"*\"*20)\n",
+    "    if not data:\n",
+    "        break\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,Company,Contact,Country\n",
+      "1,Alfreds Futterkiste,Ma\n",
+      "ria Anders,Germany\n",
+      "2,Centro comercial Moctezuma,Fr\n",
+      "ancisco Chang,Mexico\n",
+      "3,Ernst Handel,Roland Mendel,\n",
+      "Austria\n",
+      "4,Island Trading,Helen Bennett,UK\n",
+      "5,Laughi\n",
+      "ng Bacchus Winecellars,Yoshi Tannamuri,Canada\n",
+      "6,Ma\n",
+      "gazzini Alimentari Riuniti,Giovanni Rovelli,Italy\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "data = True\n",
+    "while data:\n",
+    "    data = f.read(50)\n",
+    "    print(data)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,Company,Contact,Country\n",
+      "\n",
+      "********************\n",
+      "1,Alfreds Futterkiste,Maria Anders,Germany\n",
+      "\n",
+      "********************\n",
+      "2,Centro comercial Moctezuma,Francisco Chang,Mexico\n",
+      "\n",
+      "********************\n",
+      "3,Ernst Handel,Roland Mendel,Austria\n",
+      "\n",
+      "********************\n",
+      "4,Island Trading,Helen Bennett,UK\n",
+      "\n",
+      "********************\n",
+      "5,Laughing Bacchus Winecellars,Yoshi Tannamuri,Canada\n",
+      "\n",
+      "********************\n",
+      "6,Magazzini Alimentari Riuniti,Giovanni Rovelli,Italy\n",
+      "\n",
+      "********************\n",
+      "\n",
+      "********************\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "i=True\n",
+    "while i:\n",
+    "    i=f.readline()\n",
+    "    print(i)\n",
+    "    print(\"*\"*20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0,Company,Contact,Country\\n', '1,Alfreds Futterkiste,Maria Anders,Germany\\n', '2,Centro comercial Moctezuma,Francisco Chang,Mexico\\n', '3,Ernst Handel,Roland Mendel,Austria\\n', '4,Island Trading,Helen Bennett,UK\\n', '5,Laughing Bacchus Winecellars,Yoshi Tannamuri,Canada\\n', '6,Magazzini Alimentari Riuniti,Giovanni Rovelli,Italy\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "data = f.readlines()\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,Company,Contact,Country\n",
+      "\n",
+      "1,Alfreds Futterkiste,Maria Anders,Germany\n",
+      "\n",
+      "2,Centro comercial Moctezuma,Francisco Chang,Mexico\n",
+      "\n",
+      "3,Ernst Handel,Roland Mendel,Austria\n",
+      "\n",
+      "4,Island Trading,Helen Bennett,UK\n",
+      "\n",
+      "5,Laughing Bacchus Winecellars,Yoshi Tannamuri,Canada\n",
+      "\n",
+      "6,Magazzini Alimentari Riuniti,Giovanni Rovelli,Italy\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "for line in f:\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', 'Company', 'Contact', 'Country\\n']\n",
+      "['1', 'Alfreds Futterkiste', 'Maria Anders', 'Germany\\n']\n",
+      "['2', 'Centro comercial Moctezuma', 'Francisco Chang', 'Mexico\\n']\n",
+      "['3', 'Ernst Handel', 'Roland Mendel', 'Austria\\n']\n",
+      "['4', 'Island Trading', 'Helen Bennett', 'UK\\n']\n",
+      "['5', 'Laughing Bacchus Winecellars', 'Yoshi Tannamuri', 'Canada\\n']\n",
+      "['6', 'Magazzini Alimentari Riuniti', 'Giovanni Rovelli', 'Italy\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "for line in f:\n",
+    "    print(line.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', 'Company', 'Contact', 'Country\\n']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-507e1a536938>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "for line in f:\n",
+    "    print(line.split(\",\"))[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company\n",
+      "Alfreds Futterkiste\n",
+      "Centro comercial Moctezuma\n",
+      "Ernst Handel\n",
+      "Island Trading\n",
+      "Laughing Bacchus Winecellars\n",
+      "Magazzini Alimentari Riuniti\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "for line in f:\n",
+    "    if line:\n",
+    "        print(line.split(\",\")[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company\n",
+      "Alfreds Futterkiste\n",
+      "Centro comercial Moctezuma\n",
+      "Ernst Handel\n",
+      "Island Trading\n",
+      "Laughing Bacchus Winecellars\n",
+      "Magazzini Alimentari Riuniti\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "for line in f:\n",
+    "    print(line.split(\",\")[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company\n",
+      "Alfreds Futterkiste\n",
+      "Centro comercial Moctezuma\n",
+      "Ernst Handel\n",
+      "Island Trading\n",
+      "Laughing Bacchus Winecellars\n",
+      "Magazzini Alimentari Riuniti\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-b79e658ce011>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"data.csv\")\n",
+    "for line in f:\n",
+    "    print(line.split(\",\")[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
